<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="0dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="QUOTES JUNCTION"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/quoteIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleX="-1"
                android:scaleY="-1"
                android:src="@drawable/ic_quote"
                app:tint="#454545" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/quoteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Genius is one percent inspiration and ninety-nine percent perspiration."
                    android:textColor="#454545"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quoteAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Bruce Wayne"
                    android:textColor="#454545"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_left_arrow"
            android:text="PREVIOUS"
            android:textColor="#FFF"
            android:onClick="onPrevious"
            style="?attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_arrow"
            android:text="NEXT"
            android:textColor="#FFF"
            android:onClick="onNext"
            style="?attr/borderlessButtonStyle" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/shareFab"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/shape_circle"
        android:onClick="onShare"
        android:src="@drawable/ic_share"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        android:contentDescription="Share"
        app:layout_constraintEnd_toEndOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>